feat: automatically install fzf

--- a/windows/config.json.sample
+++ b/windows/config.json.sample
@@ -1,6 +1,7 @@
 {
   "UserPreferences": {
-    "AutoUpdates": null
+    "AutoUpdates": null,
+    "ToolsPath": null,
   },
   "AutoUpdate": {
     "LastChecked": null,
