fix: update logic

--- a/windows/config.json.sample
+++ b/windows/config.json.sample
@@ -1,10 +1,10 @@
 {
   "UserPreferences": {
     "AutoUpdates": null,
-    "ToolsPath": null,
+    "ToolsPath": null
   },
   "AutoUpdate": {
     "LastChecked": null,
-    "CheckPeriod": "daily",
+    "CheckPeriod": "daily"
   }
 }
