--- a/windows/config.json.sample
+++ b/windows/config.json.sample
@@ -1,7 +1,9 @@
 {
   "UserPreferences": {
     "AutoUpdates": null,
-    "ToolsPath": null
+    "ToolsPath": null,
+    "ShouldAutoHome": null,
+    "AutoHomeDirectory": null,
   },
   "AutoUpdate": {
     "LastChecked": null,
