feat: take first git location and also add remember install pref plus nvm location check fixes and allow force update

--- a/windows/config.json.sample
+++ b/windows/config.json.sample
@@ -8,5 +8,11 @@
   "AutoUpdate": {
     "LastChecked": null,
     "CheckPeriod": "daily"
+  },
+  "InstallPreferences": {
+    "RejectedNvm": false,
+    "RejectedAz": false,
+    "RejectedFzf": false,
+    "RejectedRipgrep": false,
   }
 }
