fix: actually use the config and set editor lol

--- a/windows/config.json.sample
+++ b/windows/config.json.sample
@@ -14,6 +14,7 @@
     "RejectedAz": false,
     "RejectedFzf": false,
     "RejectedRipgrep": false,
-    "RejectedDotnet": false
+    "RejectedDotnet": false,
+    "RejectedEditor": false
   }
 }
