fix: optimize and clean

--- a/windows/config.json.sample
+++ b/windows/config.json.sample
@@ -7,7 +7,7 @@
   },
   "AutoUpdate": {
     "LastChecked": null,
-    "CheckPeriod": "daily"
+    "CheckPeriod": null
   },
   "InstallPreferences": {
     "RejectedNvm": false,
