--- a/arch/conf/i3/config
+++ b/arch/conf/i3/config
@@ -178,10 +178,10 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 mode "resize" {
         # These bindings trigger as soon as you enter the resize mode
 
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
+        # Pressing left will shrink the window's width.
+        # Pressing right will grow the window's width.
+        # Pressing up will shrink the window's height.
+        # Pressing down will grow the window's height.
         bindsym j resize shrink width 10 px or 10 ppt
         bindsym k resize grow height 10 px or 10 ppt
         bindsym l resize shrink height 10 px or 10 ppt
@@ -204,20 +204,16 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
- id bar-1
+  id bar-1
   output DP-2
-  #status_command i3status
+  status_command i3blocks -c /home/prosdkr/.config/i3blocks/config
   tray_output primary
   font xft:Iosevka:style=Regular 12
 }
 
 bar {
   id bar-0
-  output primary
   output DP-0
-  status_command i3blocks -c /home/prosdkr/.config/i3blocks/config
-  #status_command i3status -c ~/.config/i3status/config
-  tray_output primary
   mode dock 
   font xft:Iosevka:style=Regular 12
 }
