--- a/arch/conf/x/xorg.conf
+++ b/arch/conf/x/xorg.conf
@@ -6,6 +6,8 @@
 Section "ServerLayout"
     Identifier     "Layout0"
     Screen      0  "Screen0"
+    Screen  0   "nvidia"
+    Inactive    "intel"
     InputDevice    "Keyboard0" "CoreKeyboard"
     InputDevice    "Mouse0" "CorePointer"
 
@@ -14,6 +16,12 @@ Section "ServerLayout"
     Option	"StandbyTime" 	"0"
     Option	"SuspendTime" 	"0"
     Option	"OffTime" 	"0"
+
+    Option "AllowNVIDIAGPUScreens"
+EndSection
+
+Section "ServerFlags"
+  Option "NoPM" "true"
 EndSection
 
 Section "InputDevice"
@@ -36,7 +44,7 @@ Section "Monitor"
     Identifier     "Monitor0"
     VendorName     "Unknown"
     ModelName      "Unknown"
-    Option         "DPMS"
+#    Option         "DPMS" "false"
 EndSection
 
 Section "Device"
@@ -63,4 +71,15 @@ Section "Files"
     FontPath    "/usr/share/fonts/encodings"
     FontPath    "/usr/share/fonts/misc"
     FontPath    "/usr/share/fonts/TTF"
+EndSection
+
+Section "Extensions"
+   Option "DPMS" "false"
+EndSection
+
+Section "ServerFlags"
+  Option "StandbyTime" "10000"
+  Option "SuspendTime" "10000"
+  Option "OffTime" "10000"
+#  Option "BlankTime" "10000"
 EndSection
