feat: add llvm, vscode, azure datastudio, chrome debug, and default shell changer

--- a/windows/config.json.sample
+++ b/windows/config.json.sample
@@ -15,7 +15,7 @@
     "RejectedFzf": false,
     "RejectedRipgrep": false,
     "RejectedDotnet": false,
-    "RejectedEditor": false
+    "RejectedEditor": false,
     "RejectedJq": false,
     "RejectedDefaultTerminal": false,
 
